styles/globals.css
/* ... */
.dark {
  --background: var(--color-neutral-950);
  --foreground: var(--color-neutral-100);

  --card: color-mix(in srgb, var(--background) 98%, var(--color-neutral-50));
  --card-foreground: var(--color-neutral-100);

  --popover: color-mix(in srgb, var(--background) 96%, var(--color-neutral-50));
  --popover-foreground: var(--color-neutral-100);

  --primary: var(--color-neutral-100);
  --primary-foreground: var(--color-neutral-800);

  --secondary: color-mix(in srgb, var(--color-white) 8%, var(--background));
  --secondary-foreground: var(--color-neutral-100);

  --muted: color-mix(in srgb, var(--color-neutral-50) 8%, var(--background));
  --muted-foreground: color-mix(
    in srgb,
    var(--color-neutral-500) 70%,
    var(--color-neutral-50)
  );

  --accent: color-mix(in srgb, var(--color-neutral-50) 8%, var(--background));
  --accent-foreground: var(--color-neutral-100);

  --destructive: color-mix(
    in srgb,
    var(--color-red-600) 90%,
    var(--color-neutral-50)
  );
  --destructive-foreground: var(--color-red-400);

  --info: var(--color-blue-500);
  --info-foreground: var(--color-blue-400);

  --success: var(--color-emerald-500);
  --success-foreground: var(--color-emerald-400);

  --warning: var(--color-amber-500);
  --warning-foreground: var(--color-amber-400);

  --border: color-mix(in srgb, var(--color-neutral-50) 12%, var(--background));
  --input: color-mix(in srgb, var(--color-neutral-50) 13%, var(--background));
  --ring: var(--color-neutral-500);

  --sidebar: color-mix(
    in srgb,
    var(--color-neutral-950) 97%,
    var(--color-neutral-50)
  );
  --sidebar-foreground: color-mix(
    in srgb,
    var(--color-neutral-100) 64%,
    var(--sidebar)
  );
  --sidebar-primary: var(--color-neutral-100);
  --sidebar-primary-foreground: var(--color-neutral-800);
  --sidebar-accent: color-mix(
    in srgb,
    var(--color-neutral-50) 8%,
    var(--sidebar)
  );
  --sidebar-accent-foreground: var(--color-neutral-100);
  --sidebar-border: color-mix(
    in srgb,
    var(--color-neutral-50) 11%,
    var(--sidebar)
  );
  --sidebar-ring: var(--color-neutral-400);

  --chart-1: var(--color-blue-700);
  --chart-2: var(--color-emerald-500);
  --chart-3: var(--color-amber-500);
  --chart-4: var(--color-purple-500);
  --chart-5: var(--color-rose-500);

  --code: var(--background);
  --code-foreground: var(--foreground);
  --code-highlight: color-mix(in srgb, var(--color-neutral-50) 4%, var(--code));
}

@layer base {
  ::selection {
    @apply bg-primary/80 text-primary-foreground;
  }

  * {
    @apply border-border outline-ring/50 ring-ring;
  }

  html {
    @apply antialiased;
  }

  body {
    @apply bg-background min-h-svh text-foreground flex flex-col overflow-x-scroll scrollbar-thin scrollbar-track-transparent scrollbar-thumb-foreground/20 font-sans;
  }

  main {
    @apply flex-1 flex flex-col;
  }

  button:not(:disabled),
  [role="button"]:not(:disabled) {
    cursor: pointer;
  }
}

@utility container {
  @apply mx-auto max-w-[1400px] px-4;
}

@utility no-scrollbar {
  -ms-overflow-style: none;
  scrollbar-width: none;

  &::-webkit-scrollbar {
    display: none;
  }
}

@utility step {
  counter-increment: step;

  &:before {
    content: counter(step);
    @apply border border-border bg-code mr-2 inline-flex size-6 tabular-nums items-center justify-center rounded-full text-center -indent-px font-mono text-xs font-medium md:absolute md:mt-[-4px] md:ml-[-50px] md:size-8;
  }
}
/* ... */

